name:                hpod
version:             0.0.1.0
license:             Apache
license-file:        LICENSE
author:              Andreas Ekeroot
maintainer:          andeke@gmail.com
copyright:           Andreas Ekeroot 2017
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable hpod
  main-is:             Main.hs
  other-modules:       Podcast, Podcast.Rss, Podcast.Types
  -- other-extensions:
  build-depends:       base >=4.9 && <4.10,
                       bytestring >= 0.10.8.1,
                       cereal >= 0.5.4.0,
                       cereal-text >= 0.1.0.2,
                       containers >= 0.5.7.1,
                       errors >= 2.1.3,
                       http-client >= 0.5.6.1,
                       http-types >= 0.9.1,
                       mtl >= 2.2.1,
                       text >= 1.2.2.1,
                       time >= 1.6.0.1,
                       vector >= 0.11.0.0,
                       xeno >= 0.1
  hs-source-dirs:      src
  default-language:    Haskell2010
