name:                hpod
version:             0.0.1.0
license:             Apache
license-file:        LICENSE
author:              Andreas Ekeroot
maintainer:          andeke@gmail.com
copyright:           Andreas Ekeroot 2017
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable hpod
  main-is:             Main.hs
  other-modules:       Logging, Podcast, Podcast.Rss, Podcast.Types, TUI
  build-depends:       attoparsec >= 0.13.1.0,
                       base >=4.9 && <4.10,
                       brick >= 0.17.2,
                       bytestring >= 0.10.8.1,
                       cereal >= 0.5.4.0,
                       cereal-text >= 0.1.0.2,
                       containers >= 0.5.7.1,
                       directory >= 1.3.0.0,
                       errors >= 2.1.3,
                       fast-logger >= 2.4.10,
                       filepath >= 1.4.1.1,
                       io-streams >= 1.3.6.1,
                       http-streams >= 0.8.4.0,
                       ini >= 0.3.5,
                       microlens >= 0.4.8.0,
                       mtl >= 2.2.1,
                       optparse-applicative >= 0.13.2.0,
                       text >= 1.2.2.1,
                       time >= 1.6.0.1,
                       unix >= 2.7.2.1,
                       vector >= 0.11.0.0,
                       vty >= 5.15,
                       xeno >= 0.1
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -threaded
